--- a/bh/2,8.html
+++ b/bh/2,8.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>login </title>
     <link rel="stylesheet" href="./css.css">
 </head>
 <body>
-<div class="container">
+ <div class="container">
     <div class="login">
-        <button class=""></button>
-        <button class=""></button>
-        <button class=""></button>
-        <button class=""></button>
-        <div class="password"></div>
-        <div class="Login"></div>
-        <div class="gmail"></div>
+        <button></button>
+        <button></button>
     </div>
-</div>
+ </div>
 </body>
 </html>
