--- a/bh/2,8.html
+++ b/bh/2,8.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css.css">
+    <link rel="stylesheet" href="./2,8.css">
 </head>
 <body>
 <div class="container">
-    <div class="login">
-        <button class=""></button>
-        <button class=""></button>
-        <button class=""></button>
-        <button class=""></button>
-        <div class="password"></div>
-        <div class="Login"></div>
-        <div class="gmail"></div>
-    </div>
+<div class="login">
+    <button></button>
+</div>
 </div>
 </body>
 </html>
